src/test/ui/issues/issue-33293.stderr
error[E0433]: failed to resolve: use of undeclared crate or module `aaa`
  --> $DIR/issue-33293.rs:3:9
   |
LL |         aaa::bbb(_) => ()
   |         ^^^ use of undeclared crate or module `aaa`

error: aborting due to previous error

For more information about this error, try `dustc --explain E0433`.
